vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__configuration_component_configuration_vunit_binding_indication.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::configuration_declaration,\n\"\\\nconfiguration cfg of entity_name is\n  for rtl(0)\n    for inst : lib.pkg.comp\n      use entity work.bar;\n      use vunit baz;\n      for arch\n      end for;\n    end for;\n  end for;\nend configuration cfg;\",)"
---
ConfigurationDeclaration
  ConfigurationDeclarationPreamble
    Keyword(Configuration)
    Identifier 'cfg'
    Keyword(Of)
    Name
      Identifier 'entity_name'
    Keyword(Is)
  BlockConfiguration
    BlockConfigurationPreamble
      Keyword(For)
      Name
        Identifier 'rtl'
        RawTokens
          LeftPar
          AbstractLiteral '0'
          RightPar
    ComponentConfiguration
      ComponentConfigurationPreamble
        Keyword(For)
        ComponentSpecification
          InstantiationListList
            Name
              Identifier 'inst'
          Colon
          Name
            Identifier 'lib'
            SelectedName
              Dot
              Identifier 'pkg'
            SelectedName
              Dot
              Identifier 'comp'
      SemiColonTerminatedBindingIndication
        BindingIndication
          Keyword(Use)
          EntityEntityAspect
            Keyword(Entity)
            Name
              Identifier 'work'
              SelectedName
                Dot
                Identifier 'bar'
        SemiColon
      SemiColonTerminatedVerificationUnitBindingIndication
        VerificationUnitBindingIndication
          Keyword(Use)
          Keyword(Vunit)
          VerificationUnitList
            Name
              Identifier 'baz'
        SemiColon
      BlockConfiguration
        BlockConfigurationPreamble
          Keyword(For)
          Name
            Identifier 'arch'
        BlockConfigurationEpilogue
          Keyword(End)
          Keyword(For)
          SemiColon
      ComponentConfigurationEpilogue
        Keyword(End)
        Keyword(For)
        SemiColon
    BlockConfigurationEpilogue
      Keyword(End)
      Keyword(For)
      SemiColon
  ConfigurationDeclarationEpilogue
    Keyword(End)
    Keyword(Configuration)
    Identifier 'cfg'
    SemiColon
