vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__configuration_nested_block_configuration.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::configuration_declaration,\n\"\\\nconfiguration cfg of entity_name is\n  for rtl(0)\n    for name(0 to 3)\n    end for;\n    for other_name\n    end for;\n  end for;\nend configuration cfg;\",)"
---
ConfigurationDeclaration
  ConfigurationDeclarationPreamble
    Keyword(Configuration)
    Identifier 'cfg'
    Keyword(Of)
    Name
      Identifier 'entity_name'
    Keyword(Is)
  BlockConfiguration
    BlockConfigurationPreamble
      Keyword(For)
      Name
        Identifier 'rtl'
        RawTokens
          LeftPar
          AbstractLiteral '0'
          RightPar
    BlockConfigurationItem
      Keyword(For)
      Name
        Identifier 'name'
        RawTokens
          LeftPar
          AbstractLiteral '0'
          Keyword(To)
          AbstractLiteral '3'
          RightPar
      BlockConfigurationEpilogue
        Keyword(End)
        Keyword(For)
        SemiColon
    BlockConfigurationItem
      Keyword(For)
      Name
        Identifier 'other_name'
      BlockConfigurationEpilogue
        Keyword(End)
        Keyword(For)
        SemiColon
    BlockConfigurationEpilogue
      Keyword(End)
      Keyword(For)
      SemiColon
  ConfigurationDeclarationEpilogue
    Keyword(End)
    Keyword(Configuration)
    Identifier 'cfg'
    SemiColon
