vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__configuration_vunit_binding_indication.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::configuration_declaration,\n\"\\\nconfiguration cfg of entity_name is\n  use lib.foo.bar;\n  use vunit baz.foobar;\n  for rtl(0)\n  end for;\nend configuration cfg;\",)"
---
ConfigurationDeclaration
  ConfigurationDeclarationPreamble
    Keyword(Configuration)
    Identifier 'cfg'
    Keyword(Of)
    Name
      Identifier 'entity_name'
    Keyword(Is)
  UseClauseDeclaration
    UseClause
      Keyword(Use)
      NameList
        Name
          Identifier 'lib'
          SelectedName
            Dot
            Identifier 'foo'
          SelectedName
            Dot
            Identifier 'bar'
      SemiColon
  SemiColonTerminatedVerificationUnitBindingIndication
    VerificationUnitBindingIndication
      Keyword(Use)
      Keyword(Vunit)
      VerificationUnitList
        Name
          Identifier 'baz'
          SelectedName
            Dot
            Identifier 'foobar'
    SemiColon
  BlockConfiguration
    BlockConfigurationPreamble
      Keyword(For)
      Name
        Identifier 'rtl'
        RawTokens
          LeftPar
          AbstractLiteral '0'
          RightPar
    BlockConfigurationEpilogue
      Keyword(End)
      Keyword(For)
      SemiColon
  ConfigurationDeclarationEpilogue
    Keyword(End)
    Keyword(Configuration)
    Identifier 'cfg'
    SemiColon
