vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__group_template_declaration_with_infinite_entry.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::group_declaration_or_template_declaration,\n\"group dependency is (label, signal <>);\",)"
---
GroupTemplateDeclaration
  Keyword(Group)
  Identifier 'dependency'
  Keyword(Is)
  LeftPar
  EntityClassEntryList
    EntityClassEntry
      Keyword(Label)
    Comma
    EntityClassEntry
      Keyword(Signal)
      BOX
  RightPar
  SemiColon
