vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__configuration_declarations__tests__group_template_declaration_with_multiple_entries.snap
---
source: vhdl_syntax/src/parser/productions/configuration_declarations.rs
expression: "to_test_text(Parser::group_declaration_or_template_declaration,\n\"group pin2pin is (signal, signal);\",)"
---
GroupTemplateDeclaration
  Keyword(Group)
  Identifier 'pin2pin'
  Keyword(Is)
  LeftPar
  EntityClassEntryList
    EntityClassEntry
      Keyword(Signal)
    Comma
    EntityClassEntry
      Keyword(Signal)
  RightPar
  SemiColon
